# OA-backend

./: .env.example  .gitignore  OA_GRADING_INTEGRATION.md  README.md  package-lock.json  package.json  railway.json  tmpclaude-e0b9-cwd  tsconfig.json
_ext/Subject Grading/: .gitignore  Dockerfile  (+4 more)
_ext/Subject Grading/OA-Extraction/: .env.example  .gitignore  README.md  pyproject.toml  result.json
_ext/Subject Grading/OA-Extraction/src/oa_extraction/: __init__.py  arbitration.py  azure_client.py  cli.py  config.py  grok_client.py  ingest.py  pipeline.py  preprocess.py  prompts.py  types.py  validators.py
_ext/Subject Grading/OA-Extraction/tests/: test_arbitration.py  test_grok_math_refine.py  test_ingest.py  test_pipeline.py  test_results_folder4_extraction.py  test_validators.py
_ext/Subject Grading/OA-Extraction/tests/fixtures/: oa_1_expected.json
docs/: qa-grading-railway-deploy.md
migrations/: 001_create_user_paper_tracking.sql  002_create_mentoring_tables.sql  003_seed_admin_profile.sql  004_create_o_level_question_bank.sql
scripts/: bootstrap-admin-user.js  generate-drive-token.ts  import-o-level-jsons.js  import-o-level-v2.js  ingest_all_ollama.ts  pipeline.py  promote-user-admin.js  start-oa-grading-service.js  start-oa-grading-service.ps1  start-qa-grading-service.js  start-qa-grading-service.ps1  verify_embeddings.ts
src/: admin.routes.ts  auth.routes.ts  content.routes.ts  index.ts  make-files-public.ts  mentoring.routes.ts  paperParser.routes.ts  paperTracking.routes.ts  papers.routes.ts  qaGrading.routes.ts  rag.routes.ts  setup-google-oauth.ts
(+88 files in other folders)
